--- a/templates/splash.html
+++ b/templates/splash.html
@@ -5,7 +5,7 @@
 
 
 {% block main %}
-<div class="row-fluid">
-    YES!
-</div>
+Splash page goes here
+<a href="/login">Login</a>
+<a href="/register">Register</a>
 {% endblock %}
