--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,3 +12,15 @@ hr.large {
     background: #ebebeb;
     margin: 50px 0;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
+}
