Article parsing and more stuff

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
             <span id="sent">Sent</span>
         </div>
 
-        <div class="two columns username text-center">{{ user.public_name }}</div>
+        <div class="two columns username text-center">{{ user.get_name() }}</div>
     </div>
 
     <div class="row sixteen columns link-submit">
