--- a/templates/_form_helpers.html
+++ b/templates/_form_helpers.html
@@ -1,5 +1,5 @@
-{% macro render_field(field) %}
-<p>
+{% macro render_field(field, class='') %}
+    <p class={{ class }}>
   {{ field.label }}
   {{ field(**kwargs)|safe }}
   {% if field.errors %}
